--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -13,7 +13,7 @@
         Page Oficial</h1>
     </header>
     <br>
-    <section class="contenedor">
+<section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
                 <span class="titulo-item">Sanduches/
@@ -32,106 +32,106 @@
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Pastel de naranja/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Cake of orange</span>
+                <img src="IMG-AQUISITO-NOMAS/Pastel de naranja.webp" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Pizza/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Pizza</span>
+                <img src="IMG-AQUISITO-NOMAS/pizza.jpg" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Pan de chocolate/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Bread of chocolate</span>
+                <img src="IMG-AQUISITO-NOMAS/pan de chocolate.jpeg" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Pan/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Bread</span>
+                <img src="IMG-AQUISITO-NOMAS/pan.webp" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Leche/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Milk</span>
+                <img src="IMG-AQUISITO-NOMAS/leche.jpeg" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Yogurt/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Yogurt</span>
+                <img src="IMG-AQUISITO-NOMAS/yogurt.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Yogurt con conflex/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Yogurt with cereal</span>
+                <img src="IMG-AQUISITO-NOMAS/yogurt con conflex.png" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Refrescos/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Soft drinks</span>
+                <img src="IMG-AQUISITO-NOMAS/Gaseosas.webp" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Agua Cielo/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Water Cielo</span>
+                <img src="IMG-AQUISITO-NOMAS/agua cielo.jpeg" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Guitig/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Sparkling water "Guitig"</span>
+                <img src="IMG-AQUISITO-NOMAS/Guitig.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Big Cola/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Soft drinks</span>
+                <img src="IMG-AQUISITO-NOMAS/Big cola.jpeg" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Powerade/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Hydrating drink</span>
+                <img src="IMG-AQUISITO-NOMAS/Powerade.jpg" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Huevos/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Eggs</span>
+                <img src="IMG-AQUISITO-NOMAS/huevos.webp" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
