--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -634,5 +634,37 @@
             <br>
         </div>
     </section>
+    <footer>
+        <br><br>
+        <h2>SUSCRIBETE</h2>
+        <br><br>
+        <input class="email" type="email"> <input class="guardar" type="submit">
+        <br><br><br>
+        <img class="logoo" src="IMG-AQUISITO-NOMAS/Logoo_Aquisito_Nomas.png" width="100px">
+        <br><br><br><br>
+        <div class="logosapp">
+        <a class="insta" href="https://www.instagram.com/freepassec?igsh=aGd1NDlld3pneGs4" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-instagram.svg" height="50px" width="50px"> </a> 
+        <a  href="https://wa.me/+593988220328" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-whatsapp.svg" height="50px" width="50px"></a>
+        </div>
+        <br><br>
+        <h3>DIRECCIÓN
+            <br>
+            CENTRO HISTÓRICO, QUITO, ECUADOR
+        </h3>
+        <br><br>
+        <p> Aquisito Nomas 2024, Derechos reservados.</p>
+        <br>
+        <h2>© Copyright Empresa Aquisito Nomas 2024</h2>
+        <br>
+        <p> Creador y Diseñador Web: Daniel Quiguango</p>
+        <br>
+        <p>Made in Ecuador</p>
+        <br>        
+        <p>Hecho por la empresa</p>
+        <br>
+        <a href="#logo">
+            <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
+        </a>
+    </footer>
 </body>
 </html>
