--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -13,7 +13,7 @@
         Page Oficial</h1>
     </header>
     <br>
-<section class="contenedor">
+    <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
                 <span class="titulo-item">Sanduches/
@@ -634,13 +634,18 @@
             <br>
         </div>
     </section>
+    <br><br>
     <footer>
         <br><br>
         <h2>SUSCRIBETE</h2>
         <br><br>
-        <input class="email" type="email"> <input class="guardar" type="submit">
+        <div class="suscribete">
+            <input class="email" type="email"> <input class="guardar" type="submit" >
+        </div>
         <br><br><br>
+        <div class="footerlogos">
         <img class="logoo" src="IMG-AQUISITO-NOMAS/Logoo_Aquisito_Nomas.png" width="100px">
+        </div>
         <br><br><br><br>
         <div class="logosapp">
         <a class="insta" href="https://www.instagram.com/freepassec?igsh=aGd1NDlld3pneGs4" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-instagram.svg" height="50px" width="50px"> </a> 
@@ -662,9 +667,11 @@
         <br>        
         <p>Hecho por la empresa</p>
         <br>
-        <a href="#logo">
-            <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
-        </a>
+        <div class="footerlogos">
+            <a href="#logo">
+                <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
