--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -649,7 +649,7 @@
         <br><br><br><br>
         <div class="logosapp">
         <a class="insta" href="https://www.instagram.com/freepassec?igsh=aGd1NDlld3pneGs4" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-instagram.svg" height="50px" width="50px"> </a> 
-        <a  href="https://wa.me/+593988220328" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-whatsapp.svg" height="50px" width="50px"></a>
+        <a  href="https://wa.me/+593998906823" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-whatsapp.svg" height="50px" width="50px"></a>
         </div>
         <br><br>
         <h3>DIRECCIÓN
@@ -661,7 +661,7 @@
         <br>
         <h2>© Copyright Empresa Aquisito Nomas 2024</h2>
         <br>
-        <p> Creador y Diseñador Web: Daniel Quiguango</p>
+        <p> <a href="https://www.linkedin.com/in/daniel-quiguango-delgado-53b52a262/"> Fotografía, diseño y web: </a>  <a href="https://www.instagram.com/daniel_quiguango_8/"> Daniel Quiguango </a> </p>
         <br>
         <p>Made in Ecuador</p>
         <br>        
