--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -7,7 +7,7 @@
     <script src="app_aquisito_nomas.js" async></script>
 </head>
 <body>
-    <header>
+    <header id=logo>
         <h1> Tienda Aquisito Nomas 
         <br>
         Page Oficial</h1>
