--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Aquisito Nomas Page Oficial</title>
     <link rel="stylesheet" href="aquisito_nomas.css">
     <script src="app_aquisito_nomas.js" async></script>
 </head>
 <body>
-    <header id=logo>
+    <header id="logo">
         <h1> Tienda Aquisito Nomas 
         <br>
         Page Oficial</h1>
@@ -19,7 +25,7 @@
                 <span class="titulo-item">Sanduches/
                     <br>
                     Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
@@ -28,7 +34,7 @@
                     <br>
                     Cake of chocolate</span>
                 <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.75</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -36,7 +42,7 @@
                     <br>
                     Cake of orange</span>
                 <img src="IMG-AQUISITO-NOMAS/Pastel de naranja.webp" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.75</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -52,7 +58,7 @@
                     <br>
                     Bread of chocolate</span>
                 <img src="IMG-AQUISITO-NOMAS/pan de chocolate.jpeg" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.50</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -60,7 +66,7 @@
                     <br>
                     Bread</span>
                 <img src="IMG-AQUISITO-NOMAS/pan.webp" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.15</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -100,7 +106,7 @@
                     <br>
                     Water Cielo</span>
                 <img src="IMG-AQUISITO-NOMAS/agua cielo.jpeg" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.60</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -108,7 +114,7 @@
                     <br>
                     Sparkling water "Guitig"</span>
                 <img src="IMG-AQUISITO-NOMAS/Guitig.png" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.70</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -116,7 +122,7 @@
                     <br>
                     Soft drinks</span>
                 <img src="IMG-AQUISITO-NOMAS/Big cola.jpeg" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$0.25</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -124,7 +130,7 @@
                     <br>
                     Hydrating drink</span>
                 <img src="IMG-AQUISITO-NOMAS/Powerade.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
+                <span class="precio-item">$1.10</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
@@ -132,110 +138,110 @@
                     <br>
                     Eggs</span>
                 <img src="IMG-AQUISITO-NOMAS/huevos.webp" height="175px" width="200px" alt="" class="img-item">
+                <span class="precio-item">$0.15</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Ruffles/
+                    <br>
+                    Ruffles</span>
+                <img src="IMG-AQUISITO-NOMAS/Ruffles.webp" height="175px" width="300px" alt="" class="img-item">
+                <span class="precio-item">$.60</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Cheese Tris/
+                    <br>
+                    Cheese Tris</span>
+                <img src="IMG-AQUISITO-NOMAS/Cheese Tris.jpg" height="175px" width="200px" alt="" class="img-item">
+                <span class="precio-item">$0.50</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Pa' Fritas/
+                    <br>
+                    Pa' Fritas</span>
+                <img src="IMG-AQUISITO-NOMAS/pa' fritas.webp" height="175px" width="300px" alt="" class="img-item">
+                <span class="precio-item">$0.25</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Platanitos/
+                    <br>
+                    Platanitos</span>
+                <img src="IMG-AQUISITO-NOMAS/platanitos.webp" height="175px" width="200px" alt="" class="img-item">
+                <span class="precio-item">$0.60</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Pilsener/
+                    <br>
+                    Beer Pilsener</span>
+                <img src="IMG-AQUISITO-NOMAS/pilsener.jpeg" height="175px" width="300px" alt="" class="img-item">
+                <span class="precio-item">$1.25</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Club/
+                    <br>
+                    Beer Club</span>
+                <img src="IMG-AQUISITO-NOMAS/club.webp" height="175px" width="200px" alt="" class="img-item">
+                <span class="precio-item">$1.50</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Cigarrillo Malboro/
+                    <br>
+                    Cigarette Malboro</span>
+                <img src="IMG-AQUISITO-NOMAS/malboro.jpg" height="175px" width="300px" alt="" class="img-item">
+                <span class="precio-item">$0.60</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Cigarrillo Lark/
+                    <br>
+                    Cigarette Lark</span>
+                <img src="IMG-AQUISITO-NOMAS/Lark.avif" height="175px" width="200px" alt="" class="img-item">
+                <span class="precio-item">$0.60</span>
+                <button class="boton-item">Agregar al Carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Pulp/
+                    <br>
+                    Pulp</span>
+                <img src="IMG-AQUISITO-NOMAS/pulp.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">220V/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    220V</span>
+                <img src="IMG-AQUISITO-NOMAS/220v.webp" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Saviloe/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
+                    Saviloe</span>
+                <img src="IMG-AQUISITO-NOMAS/saviloe.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
+                <span class="titulo-item">Leche Vita Personal/
                     <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Milk Vita Personal</span>
+                <img src="IMG-AQUISITO-NOMAS/leche vita.jpg" height="175px" width="200px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Sanduches/
+                <span class="titulo-item">Pony Malta/
                     <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
-                    <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sanduches/
-                    <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
-                    <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sanduches/
-                    <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
-                    <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sanduches/
-                    <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
-                    <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Sanduches/
-                    <br>
-                    Sandwiches</span>
-                <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="175px" width="200px" alt="" class="img-item">
-                <span class="precio-item">$1.00</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">Pastel de chocolate/
-                    <br>
-                    Cake of chocolate</span>
-                <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" height="175px" width="300px" alt="" class="img-item">
+                    Pony Malta</span>
+                <img src="IMG-AQUISITO-NOMAS/pony malta.png" height="175px" width="300px" alt="" class="img-item">
                 <span class="precio-item">$1.00</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
@@ -649,7 +655,7 @@
         <br><br><br><br>
         <div class="logosapp">
         <a class="insta" href="https://www.instagram.com/freepassec?igsh=aGd1NDlld3pneGs4" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-instagram.svg" height="50px" width="50px"> </a> 
-        <a  href="https://wa.me/+593998906823" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-whatsapp.svg" height="50px" width="50px"></a>
+        <a  href="https://wa.me/+593988220328" target="_blank"> <img src="IMG-AQUISITO-NOMAS/logo-whatsapp.svg" height="50px" width="50px"></a>
         </div>
         <br><br>
         <h3>DIRECCIÓN
@@ -661,7 +667,7 @@
         <br>
         <h2>© Copyright Empresa Aquisito Nomas 2024</h2>
         <br>
-        <p> <a href="https://www.linkedin.com/in/daniel-quiguango-delgado-53b52a262/"> Fotografía, diseño y web: </a>  <a href="https://www.instagram.com/daniel_quiguango_8/"> Daniel Quiguango </a> </p>
+        <p> Creador y Diseñador Web: Daniel Quiguango</p>
         <br>
         <p>Made in Ecuador</p>
         <br>        
