--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -667,7 +667,7 @@
         <br>
         <h2>© Copyright Empresa Aquisito Nomas 2024</h2>
         <br>
-        <p> Creador y Diseñador Web: Daniel Quiguango</p>
+        <p> <a href="https://www.linkedin.com/in/daniel-quiguango-delgado-53b52a262/"> Fotografía, diseño y web: </a>  <a href="https://www.instagram.com/daniel_quiguango_8/"> Daniel Quiguango </a> </p>
         <br>
         <p>Made in Ecuador</p>
         <br>        
