--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1190,15 +1190,17 @@
                 <div class="carrito-item">
                     <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" width="80px" alt="">
                     <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Pastel de chocolate</span>
+                        <span class="carrito-item-titulo">Pastel de chocolate/
+                            <br>
+                            Cake of chocolate</span>
                         <div class="selector-cantidad">
                             <br>
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
+                            <i class="fa-solid fa-minus resta-cantidad"></i>
                             <input type="text" value="1" class="carrito-item-cantidad" disabled>
                             <i class="fa-solid fa-plus suma-cantidad"></i>
                         </div>
                         <br>
-                        <span class="carrito-item-precio" id="total">$1.00</span>
+                        <span class="carrito-item-precio" id="total">$0.75</span>
                     </div>
                     <br> 
                     <span class="btn-eliminar">
@@ -1207,12 +1209,15 @@
                 </div>
                 <br>
                 <div class="carrito-item">
-                    <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" width="80px" alt="">
+                    <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="80px" width="80px" alt="">
                     <div class="carrito-item-detalles">
-                        <span class="carrito-item-titulo">Pastel de chocolate</span>
+                        <span class="carrito-item-titulo">Sanduches/
+                            <br>
+                            Sandwiches
+                        </span>
                         <div class="selector-cantidad">
                             <br>
-                            <i class="fa-solid fa-minus restar-cantidad"></i>
+                            <i class="fa-solid fa-minus resta-cantidad"></i>
                             <input type="text" value="2" class="carrito-item-cantidad" disabled>
                             <i class="fa-solid fa-plus suma-cantidad"></i>
                         </div>
