--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         Page Oficial</h1>
     </header>
     <br>
-<section class="contenedor">
+    <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
                 <span class="titulo-item">Sanduches/
@@ -1207,7 +1207,7 @@
                         <i class="fa-solid fa-trash"></i>
                     </span>
                 </div>
-                <br>
+
                 <div class="carrito-item">
                     <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="80px" width="80px" alt="">
                     <div class="carrito-item-detalles">
@@ -1229,19 +1229,17 @@
                         <i class="fa-solid fa-trash"></i>
                     </span>
                 </div>
-                <br>
-                <div class="carrito-total">
-                    <div class="fila">
-                        <strong>Tu Total</strong>
-                        <span class="carrito-precio-total">
-                            $3.00
-                        </span>
-                    </div>
-                    <br>
-                    <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
-                </div>
             </div>
-            <br>
+
+            <div class="carrito-total">
+                <div class="fila">
+                    <strong>Tu Total</strong>
+                    <span class="carrito-precio-total">
+                        $3.00
+                    </span>
+                </div>
+                <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
+            </div>    
         </div>
     </section>
     <br><br>
@@ -1279,7 +1277,7 @@
         <br>
         <div class="footerlogos">
             <a href="#logo">
-                <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
+                <img class="logo" src="IMG-AQUISITO-NOMAS/logo.own.jpg" height="80px">
             </a>
         </div>
     </footer>
