--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1187,6 +1187,7 @@
             </div>
 
             <div class="carrito-items">
+                <!--
                 <div class="carrito-item">
                     <img src="IMG-AQUISITO-NOMAS/pastel de chocolate.jpg" width="80px" alt="">
                     <div class="carrito-item-detalles">
@@ -1200,14 +1201,13 @@
                             <i class="fa-solid fa-plus suma-cantidad"></i>
                         </div>
                         <br>
-                        <span class="carrito-item-precio" id="total">$0.75</span>
+                        <span class="carrito-item-precio">$0.75</span>
                     </div>
                     <br> 
                     <span class="btn-eliminar">
                         <i class="fa-solid fa-trash"></i>
                     </span>
                 </div>
-
                 <div class="carrito-item">
                     <img src="IMG-AQUISITO-NOMAS/sanduche.png" height="80px" width="80px" alt="">
                     <div class="carrito-item-detalles">
@@ -1222,13 +1222,14 @@
                             <i class="fa-solid fa-plus suma-cantidad"></i>
                         </div>
                         <br>
-                        <span class="carrito-item-precio" id="total">$1.00</span>
+                        <span class="carrito-item-precio">$1.00</span>
                     </div>
                     <br> 
                     <span class="btn-eliminar">
                         <i class="fa-solid fa-trash"></i>
                     </span>
                 </div>
+                -->
             </div>
 
             <div class="carrito-total">
@@ -1239,7 +1240,8 @@
                     </span>
                 </div>
                 <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
-            </div>    
+            </div>
+            <p> Antes de pagar por favor dar click a cualquier boton de suma o resta para que el carrito se actualice correctamente</p>    
         </div>
     </section>
     <br><br>
@@ -1277,9 +1279,8 @@
         <br>
         <div class="footerlogos">
             <a href="#logo">
-                <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
+                <img class="logo" src="IMG-AQUISITO-NOMAS/logo.own.jpg" height="80px">
             </a>
         </div>
     </footer>
 </body>
-</html>
