--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1241,7 +1241,7 @@
                 </div>
                 <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
             </div>
-            <p> Antes de pagar por favor dar click a cualquier boton de suma o resta para que el carrito se actualice correctamente</p>    
+            <p class="message-carrito"> Antes de pagar por favor dar click a cualquier boton de suma o resta para que el carrito se actualice correctamente</p>    
         </div>
     </section>
     <br><br>
