--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carattere&family=Dosis:wght@200..800&family=Kablammo&family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Pacifico&family=Pirata+One&family=Sofia&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
